update verify otp func
