# internal/api/controllers/account_controller.go
@@ -95,3 +95,30 @@ func (a *AccountController) ForgotPassword(c *gin.Context) {
 
 	utils.RespondSuccess(c, nil, "If the email exists, a reset link has been sent")
 }
+
+
+// VerifyOtpToken handles the verification of an OTP token.
+// @Summary Verify an OTP token
+// @Description Validates the provided OTP token for account verification
+// @Tags Accounts
+// @Accept json
+// @Produce json
+// @Param request body request_models.RequestVerifyOtpToken true "OTP token verification payload"
+// @Success 200 {object} utils.APIResponse
+// @Failure 400 {object} utils.APIResponse
+// @Router /accounts/verify-otp [post]
+func (a *AccountController) VerifyOtpToken(c *gin.Context) {
+	var req request_models.RequestVerifyOtpToken
+	if err := c.ShouldBindJSON(&req); err != nil {
+		utils.RespondError(c, http.StatusBadRequest, "Invalid request format")
+		return
+	}
+
+	err := a.accountService.VerifyOtpToken(req)
+	if err != nil {
+		utils.HandleServiceError(c, err)
+		return
+	}
+
+	utils.RespondSuccess(c, nil, "Otp token verified successfully")
+}
